# python-uv-actions

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python.yml
