[project]
name = "your_project_name"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.21.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
