[project]
name = "python-uv-actions"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.33.1",
    "numpy>=2.4.4"
]
